--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "animejs": "^3.2.1",
     "core-js": "^3.8.3",
+    "modern-normalize": "^1.1.0",
+    "particles.vue3": "^1.42.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-writer": "^1.2.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -24,6 +30,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
